--- a/preamble.tex
+++ b/preamble.tex
@@ -48,9 +48,10 @@
 \usepackage{subfig}
 \usepackage{titlesec}
 \usepackage[width={autoauto}]{thumbs}
+\usepackage{tipa}
 
-%\onehalfspacing
-\doublespacing
+\onehalfspacing
+%\doublespacing
 
 % Use symbols instead of numbers for footnote marks
 %
