sec 5: fusion/representing producers
the Alloy type, why we separate the two concerns

--- a/preamble.tex
+++ b/preamble.tex
@@ -33,6 +33,7 @@
 \usepackage[all]{hypcap}
 \usepackage{ifthen}
 \usepackage{inconsolata}
+% \usepackage{sourcecodepro}
 % \usepackage{lastpage}
 \usepackage{listings}
 \usepackage{longtable}
@@ -49,6 +50,7 @@
 \usepackage{titlesec}
 \usepackage[width={autoauto}]{thumbs}
 \usepackage{tipa}
+% \usepackage{upquote}
 
 \onehalfspacing
 %\doublespacing
